--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -12,9 +12,9 @@
 	<meta name="screen-orientation" content="portrait">
 	<meta name="x5-orientation" content="portrait">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
-	<title>中洁清洁-公共区域保洁服务商</title>
-	<meta name="keywords" content="酒店清洁、学校清洁、医院清洁、办公清洁、商场清洁，城市清洁，政府清洁，保洁人员外包">
-	<meta name="description" content="2022冬残奥会优质服务荣誉获得单位，酒店清洁、学校清洁、医院清洁、办公清洁、商场清洁，城市清洁，政府清洁，保洁人员外包，一站式保洁外包服务商">
+	<title>官网-华劳集团股份有限公司</title>
+	<meta name="keywords" content="华劳集团股份有限公司,政务招聘服务,政务编外派遣服务,政务外包服务,人才招聘服务,劳务派遣服务,岗位/产线外包服务,灵活用工服务,建筑工程劳务分包,机电安装劳务分包,雇工伞,高管福利,员工关怀计划,建工宝,客房清洁HCO,公共区域保洁,PA 保洁,保洁岗位外包">
+	<meta name="description" content="华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。">
 	<meta http-equiv="Cache-Control" content="no-transform">
 	<meta http-equiv="Cache-Control" content="no-siteapp">
 	<meta http-equiv="Pragma" content="no-cache">
@@ -24,13 +24,12 @@
     <link href="__TMPL__/public/assets/style/css/bootstrap.min.3.3.7.css" rel="stylesheet">
 	<link href="__TMPL__/public/assets/style/css/slick.css" rel="stylesheet">
 	<link href="__TMPL__/public/assets/style/css/slick-theme.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/reset.css?v=0.08">
-    <link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/common.css?v=0.11">
-    <link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/index.css?v=0.11">
+	<link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/reset.css?v=0.01">
+    <link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/common.css?v=0.01">
+    <link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/index.css?v=0.01">
 	<link href="__TMPL__/public/assets/style/font/iconfont.css" rel="stylesheet">
-    <link rel="shortcut icon" href="__TMPL__/public/assets/style/img/favicon.ico">
+    <link rel="shortcut icon" href="__TMPL__/public/assets/style/imgs/favicon.ico">
     <link href="__TMPL__/public/assets/style/css/contact.css" rel="stylesheet">
-    <link href="__TMPL__/public/assets/style/css/staffs.css" rel="stylesheet">
     <link href="__TMPL__/public/assets/style/css/map.css" rel="stylesheet">
     <link href="__TMPL__/public/assets/style/css/news.css" rel="stylesheet">
 	<script src="__TMPL__/public/assets/style/js/jquery.min.js"></script>
@@ -44,15 +43,15 @@
 <!--头部公用-start-->
 <div class="navbar nav-header hidden-xs header">
     <div class="header-box">
-        <div class="row">
-            <div class="col-lg-2 col-md-2 col-sm-2">
+		<div class="flex">
+			<div class="">
 				<a href="javascript:void(0)" class="img-logo"></a>
-            </div>
-            <div class="col-lg-8 col-md-8 col-sm-8">
-                <ul class="nav navbar-nav">
-                    <li data-url = "index"><p><a href="{:cmf_url('portal/Index/index')}" title="首页">首页</a></p></li>
-                    <li data-url = "solution">
-						<p><a href="javascript:;" title="解决方案&产品服务">解决方案&产品服务</a></p>
+			</div>
+			<div>
+				<ul class="nav navbar-nav">
+				    <li data-url = "index"><p><a href="{:cmf_url('portal/Index/index')}" title="首页">首页</a></p></li>
+					<li data-url = "product">
+						<p><a href="javascript:;" title="产品服务">产品服务</a></p>
 						<div class="menu-dropdown" id="menu-dropdown-1">
 							<div id="menu-dropdown-wrapper" class="menu-dropdown-wrapper">
 								<div id="menu-dropdown-content-wrapper" class="menu-dropdown-content-wrapper" style="border:none;height:100%">
@@ -87,16 +86,65 @@
 							</div>
 						</div>
 					</li>
-                    <!-- <li data-url = "news"><p><a href="{:cmf_url('portal/News/index')}" title="新闻中心">新闻中心</a></p></li> -->
-                    <li data-url = "about"><p><a href="{:cmf_url('portal/About/index')}" title="关于中洁">关于中洁</a></p></li>
-                    <li data-url = "customer"><p><a href="{:cmf_url('portal/Customer/index')}" title="合作客户">合作客户</a></p></li>
-                    <li data-url = "contacts"><p><a href="{:cmf_url('portal/Contacts/index')}" title="联系我们">联系我们</a></p></li>
-                    <li data-url = "form"><p><a href="{:cmf_url('portal/Form/index')}" title="预约方案" target="_blank">预约方案</a></p></li>
-                    <li data-url = "staffs"><p><a href="{:cmf_url('portal/Staffs/index')}" title="员工查询" target="_blank">员工查询</a></p></li>
-                </ul>
+				    <li data-url = "solution">
+						<p><a href="javascript:;" title="解决方案">产品服务</a></p>
+						<div class="menu-dropdown" id="menu-dropdown-1">
+							<div id="menu-dropdown-wrapper" class="menu-dropdown-wrapper">
+								<div id="menu-dropdown-content-wrapper" class="menu-dropdown-content-wrapper" style="border:none;height:100%">
+									<div class="menu-dropdown-content-2 flex-box" id="menu-dropdown-content"  style="height:100%">
+										<ul class="nav-item-title">
+											<li class="title-active">解决方案</li>
+											<li>产品服务</li>
+										</ul>
+										<ul class="nav-item-text" style="height:100%;border-left: solid 1px #e6e6e6;">
+											<li class="nav-item-text-list text-active">
+												<ul class="nav-item-text-item flex-box">
+													<li><a href="{:cmf_url('portal/Solution/index',array('id'=>1))}" title="国企和上市物业公司保洁用工解决方案">国企和上市物业公司保洁用工解决方案</a></li>
+													<li><a href="{:cmf_url('portal/Solution/index',array('id'=>2))}" title="保洁用工风险解决方案">保洁用工风险解决方案</a></li>
+													<li><a href="{:cmf_url('portal/Solution/index',array('id'=>3))}" title="保洁人员招聘外包解决方案">保洁人员招聘外包解决方案</a></li>
+												</ul>
+											</li>
+											<li class="nav-item-text-list">
+												<ul class="nav-item-text-item flex-box">
+													<li><a href="{:cmf_url('portal/Service/index',array('id'=>1))}" title="政府清洁">政府清洁</a></li>
+													<li><a href="{:cmf_url('portal/Service/index',array('id'=>2))}" title="酒店清洁">酒店清洁</a></li>
+													<li><a href="{:cmf_url('portal/Service/index',array('id'=>3))}" title="学校清洁">学校清洁</a></li>
+													<li><a href="{:cmf_url('portal/Service/index',array('id'=>4))}" title="医院清洁">医院清洁</a></li>
+													<li><a href="{:cmf_url('portal/Service/index',array('id'=>5))}" title="写字楼清洁">写字楼清洁</a></li>
+													<li><a href="{:cmf_url('portal/Service/index',array('id'=>6))}" title="工业园区清洁">工业园区清洁</a></li>
+													<li><a href="{:cmf_url('portal/Service/index',array('id'=>7))}" title="城市环境清洁">城市环境清洁</a></li>
+													<li><a href="{:cmf_url('portal/Service/index',array('id'=>8))}" title="商场清洁">商场清洁</a></li>
+												</ul>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+				    <li data-url = "news"><p><a href="{:cmf_url('portal/News/index')}" title="新闻中心">新闻咨询</a></p></li>
+					<li data-url = "news"><p><a href="{:cmf_url('portal/News/index')}" title="合伙人计划">合伙人计划</a></p></li>
+				    <li data-url = "about"><p><a href="{:cmf_url('portal/About/index')}" title="关于我们">关于我们</a></p></li>
+				    <li data-url = "contacts"><p><a href="{:cmf_url('portal/Contacts/index')}" title="联系我们">联系我们</a></p></li>
+				    <li data-url = "customer"><p><a href="{:cmf_url('portal/Customer/index')}" title="合作客户">合作客户</a></p></li>
+				    <li data-url = "form"><p><a href="{:cmf_url('portal/Form/index')}" title="企业应用" target="_blank">企业应用</a></p></li>
+				</ul>
+			</div>
+			<div class="header-icon-imgs">
+				<img src="__TMPL__/public/assets/style/imgs/index/language.svg">
+				<span>|</span>
+				<img src="__TMPL__/public/assets/style/imgs/index/search.svg">
+			</div>
+		</div>
+        <!-- <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-2">
+            	<a href="javascript:void(0)" class="img-logo"></a>
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-8">
+                
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 num-phone">186 0111 8711</div>
-        </div>
+        </div> -->
     </div>
 </div>
 
@@ -180,9 +228,6 @@
 			</li>
 			<li class="menu-splitL-li border-1px-rgba animate">
 				<a href="{:cmf_url('portal/Form/index')}" class="menu-splitL-item" title="预约方案">预约方案</a>
-			</li>
-			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/Staffs/index')}" class="menu-splitL-item" title="员工查询">员工查询</a>
 			</li>
 		</ul>
     </div>
