--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -9,41 +9,7 @@
 	<body>
 		<div style="position: relative;">
 			<div class="index-banner index-banner-top">
-				<div class="swiper-container">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="hidden-xs banner-img">
-								<img src="__TMPL__/public/assets/style/img/banner/banner_1.png"
-									style="width: 100%;height: 440px;" />
-							</div>
-							<div class="hidden-lg hidden-md hidden-sm banner-img">
-								<img src="__TMPL__/public/assets/style/img/banner/moble_1.png"
-									style="width: 100%;height: 240px;" />
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="hidden-xs banner-img">
-								<img src="__TMPL__/public/assets/style/img/banner/banner_2.png"
-									style="width: 100%;height: 440px;" />
-							</div>
-							<div class="hidden-lg hidden-md hidden-sm banner-img">
-								<img src="__TMPL__/public/assets/style/img/banner/moble_2.jpg"
-									style="width: 100%;height: 240px;" />
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="hidden-xs banner-img">
-								<img src="__TMPL__/public/assets/style/img/banner/banner_3.png"
-									style="width: 100%;height: 440px;" />
-							</div>
-							<div class="hidden-lg hidden-md hidden-sm banner-img">
-								<img src="__TMPL__/public/assets/style/img/banner/moble_1.png"
-									style="width: 100%;height: 240px;" />
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="swiper-pagination"></div>
+				<img src="__TMPL__/public/assets/style/imgs/index/banner.png" />
 			</div>
 			<div class="hidden-lg hidden-md hidden-sm" style="padding: 0.5rem;">
 				<div class="row solution-1">
@@ -70,34 +36,67 @@
 					</div>
 				</div>
 			</div>
-			<div class="hidden-xs" style="position: absolute;top: 7rem;left:0;z-index: 11;width: 100%;">
-				<div class="inner" style="background: #fff;box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.05);">
+			<div class="hidden-xs" style="width: 100%;background: #fff;border-bottom: solid 1px #FF5000;">
+				<div class="inner">
 					<div class="row solution-3">
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 							<div class="solution-3-item">
-								<div class="solution-3-item-title">荣誉标杆 <img
-										src="__TMPL__/public/assets/style/img/icon-next.png" /></div>
-								<div class="solution-3-item-text">2022冬残奥会荣誉获得单位</div>
+								<div class="solution-3-item-title">2007年</div>
+								<div class="solution-3-item-text">集团始创于2007年</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 							<div class="solution-3-item">
-								<div class="solution-3-item-title">强力支撑 <img
-										src="__TMPL__/public/assets/style/img/icon-next.png" /></div>
-								<div class="solution-3-item-text">华劳集团15年人力服务经验</div>
+								<div class="solution-3-item-title">110000000</div>
+								<div class="solution-3-item-text">注册资本1.1亿</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 							<div class="solution-3-item">
-								<div class="solution-3-item-title">雄厚实力 <img
-										src="__TMPL__/public/assets/style/img/icon-next.png" /></div>
-								<div class="solution-3-item-text">雄厚的专业化后勤保障体系</div>
+								<div class="solution-3-item-title">21+</div>
+								<div class="solution-3-item-text">业务范围覆盖21个省份</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+							<div class="solution-3-item">
+								<div class="solution-3-item-title">500000+</div>
+								<div class="solution-3-item-text">安置就业50余万人</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				
 			</div>
+			<div class="index-product">
+				<div class="inner">
+					<div class="flex">
+						<div class="index-product-item" style="flex: 2;">
+							<div class="title">我们的<span class="col">产品服务</span></div>
+							<div class="text">持续不断为客户提供具有价值的产品和服务</div>
+						</div>
+						<div class="index-product-item2">
+							<div class="index-product-item2-innerbox">
+								<div class="flex-box">
+									<div><img src="__TMPL__/public/assets/style/imgs/index/products/1.svg" /></div>
+									<div class="title">劳务派遣</div>
+								</div>
+								<div class="text">机关事业单位劳务派遣、国有企业劳务派遣</div>
+							</div>
+						</div>
+						<div class="index-product-item">
+							<div>我们的产品服务</div>
+							<div>持续不断为客户提供具有价值的产品和服务</div>
+						</div>
+						<div class="index-product-item">
+							<div>我们的产品服务</div>
+							<div>持续不断为客户提供具有价值的产品和服务</div>
+						</div>
+					</div>
+				</div>
+				
+			</div>
+			
+			
 			<div class="hidden-xs bg" style="padding-top: 1.85rem;">
 				<div class="inner">
 					<div class="inner-bigger-title text-center">
