--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -43,7 +43,7 @@
 <!--头部公用-start-->
 <div class="navbar nav-header hidden-xs header">
     <div class="header-box">
-		<div class="flex">
+		<div class="flex-around">
 			<div class="">
 				<a href="javascript:void(0)" class="img-logo"></a>
 			</div>
@@ -87,7 +87,7 @@
 						</div>
 					</li>
 				    <li data-url = "solution">
-						<p><a href="javascript:;" title="解决方案">产品服务</a></p>
+						<p><a href="javascript:;" title="解决方案">解决方案</a></p>
 						<div class="menu-dropdown" id="menu-dropdown-1">
 							<div id="menu-dropdown-wrapper" class="menu-dropdown-wrapper">
 								<div id="menu-dropdown-content-wrapper" class="menu-dropdown-content-wrapper" style="border:none;height:100%">
@@ -132,9 +132,10 @@
 			</div>
 			<div class="header-icon-imgs">
 				<img src="__TMPL__/public/assets/style/imgs/index/language.svg">
-				<span>|</span>
+				<span style="color: #fff;padding: 0 10px;">|</span>
 				<img src="__TMPL__/public/assets/style/imgs/index/search.svg">
 			</div>
+			<div class="num-phone">400-8718711</div>
 		</div>
         <!-- <div class="row">
             <div class="col-lg-2 col-md-2 col-sm-2">
