--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -36,7 +36,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="hidden-xs" style="width: 100%;background: #fff;border-bottom: solid 1px #FF5000;">
+			<div style="width: 100%;background: #fff;border-bottom: solid 1px #FF5000;">
 				<div class="inner">
 					<div class="row solution-3">
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
@@ -70,55 +70,291 @@
 			<div class="index-product">
 				<div class="inner">
 					<div class="flex">
-						<div class="index-product-item" style="flex: 2;">
-							<div class="title">我们的<span class="col">产品服务</span></div>
-							<div class="text">持续不断为客户提供具有价值的产品和服务</div>
+						<div class="index-product-item index-product-item-bigger">
+							<div class="index-product-item-innerbox">
+								<div class="title">我们的<span class="col">产品服务</span></div>
+								<div class="text">持续不断为客户提供具有价值的产品和服务</div>
+							</div>
 						</div>
-						<div class="index-product-item2">
-							<div class="index-product-item2-innerbox">
+						<div class="index-product-item">
+							<div class="index-product-item-innerbox2">
 								<div class="flex-box">
-									<div><img src="__TMPL__/public/assets/style/imgs/index/products/1.svg" /></div>
+									<div class="img"></div>
 									<div class="title">劳务派遣</div>
 								</div>
 								<div class="text">机关事业单位劳务派遣、国有企业劳务派遣</div>
 							</div>
 						</div>
 						<div class="index-product-item">
-							<div>我们的产品服务</div>
-							<div>持续不断为客户提供具有价值的产品和服务</div>
+							<div class="index-product-item-innerbox2">
+								<div class="flex-box">
+									<div class="img"></div>
+									<div class="title">岗位外包</div>
+								</div>
+								<div class="text">岗位流程外包有助于分散用人风险、降低管理成本、避免劳动纠纷</div>
+							</div>
 						</div>
 						<div class="index-product-item">
-							<div>我们的产品服务</div>
-							<div>持续不断为客户提供具有价值的产品和服务</div>
+							<div class="index-product-item-innerbox2">
+								<div class="flex-box">
+									<div class="img"></div>
+									<div class="title">业务外包</div>
+								</div>
+								<div class="text">整合优秀的专业化资源，降低成本、提高效率、发挥核心竞争力</div>
+							</div>
+						</div>
+						<div class="index-product-item">
+							<div class="index-product-item-innerbox2">
+								<div class="flex-box">
+									<div class="img"></div>
+									<div class="title">建筑劳务分包</div>
+								</div>
+								<div class="text">建筑劳务分包、机电安装劳务分包、劳务资质合作</div>
+							</div>
+						</div>
+						<div class="index-product-item">
+							<div class="index-product-item-innerbox2">
+								<div class="flex-box">
+									<div class="img"></div>
+									<div class="title">保洁外包</div>
+								</div>
+								<div class="text">客服清洁外包、酒店大堂清洁外包、办公室清洁外包...</div>
+							</div>
+						</div>
+						<div class="index-product-item">
+							<div class="index-product-item-innerbox2">
+								<div class="flex-box">
+									<div class="img"></div>
+									<div class="title">安保服务</div>
+								</div>
+								<div class="text">保安服务、安检服务、商务保镖、临时勤务</div>
+							</div>
+						</div>
+						<div class="index-product-item">
+							<div class="index-product-item-innerbox2">
+								<div class="flex-box">
+									<div class="img"></div>
+									<div class="title">灵活用工</div>
+								</div>
+								<div class="text">集合兼职招聘、兼职管理、传单派发、临促等为一体的兼职服务</div>
+							</div>
+						</div>
+						<div class="index-product-item">
+							<div class="index-product-item-innerbox2">
+								<div class="flex-box">
+									<div class="img"></div>
+									<div class="title">工伤外包</div>
+								</div>
+								<div class="text">帮助解决企业工伤风险，让企业更专注于研发和生产</div>
+							</div>
 						</div>
 					</div>
 				</div>
 				
 			</div>
-			
-			
-			<div class="hidden-xs bg" style="padding-top: 1.85rem;">
+			<div class="index-solution">
 				<div class="inner">
 					<div class="inner-bigger-title text-center">
-						<p>深耕公共区域保洁服务</p>
-						<!-- <p></p>
-			<p>SOLUTION</p> -->
+						<p>一站式人力资源整体<span class="col">解决方案</span></p>
 					</div>
-					<div class="text-center" style="line-height: 0.58rem;color: #6E6E73;font-size: 0.25rem;">
-						公司主要为酒店、商场、学校、医院、物业公司和政府机关、企事业单位写字楼等，提供公共区域专业保洁服务。</div>
+					<div class="text-center" style="color: #999;font-size: 0.25rem;">持续不断为客户提供具有价值的产品和服务</div>
+					<div class="index-solution-box">
+						<div class="flex-box">
+							<div class="index-solution-box-left">
+								<ul>
+									<li class="active">
+										<div class="icon"></div>
+										<div class="content">
+											<div class="title">政务编外派遣服务解决方案</div>
+											<div class="text">提高行政效率、降低行政成本、规避劳务风险、更省心、更便捷</div>
+										</div>
+									</li>
+									<li>
+										<div class="icon"></div>
+										<div class="content">
+											<div class="title">政务编外派遣服务解决方案</div>
+											<div class="text">提高行政效率、降低行政成本、规避劳务风险、更省心、更便捷</div>
+										</div>
+									</li>
+									<li>
+										<div class="icon"></div>
+										<div class="content">
+											<div class="title">国企和上市物业公司保洁外包服务解决方案</div>
+											<div class="text">提高行政效率、降低行政成本、规避劳务风险、更省心、更便捷</div>
+										</div>
+									</li>
+									<li>
+										<div class="icon"></div>
+										<div class="content">
+											<div class="title">员工工伤和意外伤害全面保障方案</div>
+											<div class="text">提高行政效率、降低行政成本、规避劳务风险、更省心、更便捷</div>
+										</div>
+									</li>
+								</ul>
+							</div>
+							<div class="index-solution-box-right">
+								<div class="text">华劳集团始终以客户为中心，为客户提供极具价值的产品和服务为理念，凭借15年业务专长，专注于企业规范用工模式的探索与研发，为客户提供一站式人力资源综合解决方案。</div>
+								<div class="text">华劳集团目前服务客户累计已达3000余家，安置就业人员50余万人，为促进就业，构建和谐社会，建立新型劳动关系作出巨大贡献。</div>
+								<div class="company-name">合作客户</div>
+								<div class="flex-around">
+									<div><img src="__TMPL__/public/assets/style/imgs/index/customer/1.png" /></div>
+									<div><img src="__TMPL__/public/assets/style/imgs/index/customer/2.png" /></div>
+									<div><img src="__TMPL__/public/assets/style/imgs/index/customer/3.png" /></div>
+								</div>
+							</div>
+						</div>
+						<div class="index-solution-box-left-bottom">
+							<div class="flex-around">
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/index/md-add.svg" class="md-add" />
+									<div class="img-logo"></div>
+									<div class="text">中政外包</div>
+								</div>
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/index/md-add.svg" class="md-add" />
+									<div class="img-logo"></div>
+									<div class="text">华劳人力</div>
+								</div>
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/index/md-add.svg" class="md-add" />
+									<div class="img-logo"></div>
+									<div class="text">金伞保险</div>
+								</div>
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/index/md-add.svg" class="md-add" />
+									<div class="img-logo"></div>
+									<div class="text">中劳劳务</div>
+								</div>
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/index/md-add.svg" class="md-add" />
+									<div class="img-logo"></div>
+									<div class="text">中洁清洁</div>
+								</div>
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/index/md-add.svg" class="md-add" />
+									<div class="img-logo"></div>
+									<div class="text">中朗安服</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="hidden-lg hidden-md hidden-sm bg">
+			<div class="index-history">
+				<div class="index-history-box">
+					<div class="inner">
+						<div class="inner-bigger-title text-center">
+							<p>发展历程</p>
+						</div>
+						<div class="text-center" style="color: #999;font-size: 0.25rem;">持续不断为客户提供具有价值的产品和服务</div>
+						<div class="flex-around">
+							<div class="index-history-box-left">
+								<div class="text">华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。</div>
+								<div style="background: #ff5000;overflow: auto;height: 4.64rem;">  <!--  -->
+									<ul class="history-box">
+										<li class="active"><div class="circular"></div><div class="name">2021</div></li>
+										<li><div class="circular"></div><div class="name">11-17 上海华劳科技有限公司成立</div></li>
+										<li><div class="circular"></div><div class="name">05-26 中朗（北京）国际保安服务有限公司投资控股</div></li>
+										<li><div class="circular"></div><div class="name">05-18 山东华企科技服务有限公司成立</div></li>
+										<li><div class="circular"></div><div class="name">04-26 华劳（北京）人力资源服务有限公司投资控股</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2020</div></li>
+										<li><div class="circular"></div><div class="name">09-01 北京灵活科技有限公司 投资</div></li>
+										<li><div class="circular"></div><div class="name">05-11 华劳人力资源有限公司 (厦门) 成立</div></li>
+										<li><div class="circular"></div><div class="name">04-26 灵动未来（天津）信息技术有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">04-07 德州北方电子商务有限公司 更名为 山东企保网络科技有限公司</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2019</div></li>
+										<li><div class="circular"></div><div class="name">12-04 山东华劳人力资源有限公司菏泽分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">08-21 中洁清洁服务有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">08-16 德州华劳职业培训学校有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">06-13 山东华劳保险代理有限公司 更名为 山东金伞保险代理有限公司</div></li>
+										<li><div class="circular"></div><div class="name">04-29 山东华劳人力资源有限公司天津分公司 成立</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2018</div></li>
+										<li><div class="circular"></div><div class="name"><div>08-08 山东百业服务外包有限公司 成立</div><div>08-08 山东中劳劳务分包有限公司 成立</div><div>08-08 德州千业酒店管理有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">04-09 德州百业劳务服务有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">01-19 山东华劳人力资源有限公司 迁址 省府济南</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2017</div></li>
+										<li><div class="circular"></div><div class="name">12-15 华劳股份有限公司 更名为 华劳集团股份有限公司</div></li>
+										<li><div class="circular"></div><div class="name">11-30 山东华劳人力资源有限公司重庆分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">11-09 广州华劳人力资源有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">09-13 德州万泉保险代理有限责任公司 更名为 山东华劳保险代理有限公司</div></li>
+										<li><div class="circular"></div><div class="name">09-08 德州万泉保险代理有限责任公司 全资收购</div></li>
+										<li><div class="circular"></div><div class="name">09-05 山东华劳人力资源有限公司郑州分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">08-07 山东华劳人力资源有限公司台安分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">08-02 山东华劳人力资源有限公司新乡分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">07-25 山东华劳人力资源有限公司焦作分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">06-09 山东华劳人力资源有限公司潍坊分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">06-08 山东华劳人力资源有限公司安徽分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">06-07 山东华劳人力资源有限公司济源分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">05-31 山东华劳人力资源有限公司淮安分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">05-08 德州天衢人力资源服务有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">05-05 山东华劳人力资源有限公司吉林省分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name"><div>04-10 山东华劳人力资源有限公司徐州分公司 成立</div><div>04-10 深圳金伞保险经纪有限公司 成立</div><div>04-10 深圳总裁驿站美容连锁有限公司 成立</div></div></li>
+										<li><div class="circular"></div><div class="name">04-05 山东华劳人力资源有限公司滨州分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">03-23 华劳股份有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">03-16 四川华劳人力资源有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">01-25 山东中政服务外包有限公司 成立</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2016</div></li>
+										<li><div class="circular"></div><div class="name">12-22 山东华劳人力资源有限公司青岛分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">12-19 山东华劳人力资源有限公司河北分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">09-18 华劳（天津）人力资源有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">08-15 山东华劳人力资源有限公司禹城分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">05-10 山东华劳人力资源有限公司沂水分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">04-27 山东华劳人力资源有限公司临沂分公司 成立</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2015</div></li>
+										<li><div class="circular"></div><div class="name">11-02 德州市华劳人力资源有限公司 更名为 山东华劳人力资源有限公司</div></li>
+										<li><div class="circular"></div><div class="name">05-23 德州北方电子商务有限公司 成立</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2014</div></li>
+										<li><div class="circular"></div><div class="name">05-01 华劳就业网人才市场招聘 门店开业</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2007</div></li>
+										<li><div class="circular"></div><div class="name">11-14 德州市华劳人力资源有限公司 成立</div></li>
+									</ul>
+								</div>
+							</div>
+							<div class="index-history-box-right">
+								<div class="history-img"><img src="__TMPL__/public/assets/style/imgs/index/history/1.png" /></div>
+								<div class="history-img"><img src="__TMPL__/public/assets/style/imgs/index/history/2.png" /></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="index-advantage">
 				<div class="inner">
-					<div class="inner-bigger-title">
-						<p>深耕公共区域保洁服务</p>
-						<!-- <p></p>
-			<p>SOLUTION</p> -->
+					<div class="inner-bigger-title text-center">
+						<p>我们的优势</p>
 					</div>
-					<div class="text-center" style="line-height: 0.58rem;">
-						公司主要为酒店、商场、学校、医院、物业公司和政府机关、企事业单位写字楼等，提供公共区域专业保洁服务。</div>
+					<div class="text-center" style="color: #999;font-size: 0.25rem;">持续不断为客户提供具有价值的产品和服务</div>
+					<div class="index-advantage-box">
+						<div class="index-advantage-box-top">
+							<div class="item">
+								<img src="__TMPL__/public/assets/style/imgs/index/advance/1.svg" />
+								<div>有经验</div>
+							</div>
+							<div class="item">
+								<img src="__TMPL__/public/assets/style/imgs/index/advance/2.svg" />
+								<div>渠道广</div>
+							</div>
+							<div class="item">
+								<img src="__TMPL__/public/assets/style/imgs/index/advance/3.svg" />
+								<div>资质全</div>
+							</div>
+							<div class="item">
+								<img src="__TMPL__/public/assets/style/imgs/index/advance/4.svg" />
+								<div>专业高</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
+			
+			
+			
+			
+			
+			
+			
+			
+			
 			<div class="hidden-xs bg" style="padding-bottom: 0;padding-top: 0;">
 				<div class="inner">
 					<div class="inner-bigger-title">
