--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -345,8 +345,101 @@
 						</div>
 					</div>
 				</div>
+				<div class="index-advantage-bottom">
+					<div class="inner">
+						<div class="index-advantage-bottom-box">
+							<div class="item">
+								<img src="__TMPL__/public/assets/style/imgs/index/advance/number/1.svg" />
+								<div>服务团队平均工龄五年以上</div>
+								<div class="icon-img"></div>
+							</div>
+							<div class="item">
+								<img src="__TMPL__/public/assets/style/imgs/index/advance/number/2.svg" />
+								<div>拥有百人招聘团队<br />线上线下渠道完善</div>
+								<div class="icon-img"></div>
+							</div>
+							<div class="item">
+								<img src="__TMPL__/public/assets/style/imgs/index/advance/number/3.svg" />
+								<div>人力资源服务资质<br />保险代理资质</div>
+								<div class="icon-img"></div>
+							</div>
+							<div class="item">
+								<img src="__TMPL__/public/assets/style/imgs/index/advance/number/4.svg" />
+								<div>拥有人力资源高精尖人才50人</div>
+								<div class="icon-img"></div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
-			
+			<div class="index-news">
+				<div class="inner">
+					<div class="inner-bigger-title text-center">
+						<p>华劳动态</p>
+					</div>
+					<div class="text-center" style="color: #999;font-size: 0.25rem;">华劳集团公司新闻、人力资源行业动态</div>
+					<div class="index-news-box">
+						<div class="item">
+							<div class="title-bigger" style="background: url(__TMPL__/public/assets/style/imgs/index/news/1.png) center center no-repeat;background-size: 100% 100%;">
+								<div class="inner-box">
+									<div class="content">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
+								</div>
+							</div>
+							<div class="title">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
+							<div class="time">2022/11/05</div>
+							<div class="text">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
+							<div class="more-btn"> › </div>
+						</div>
+						<div class="item">
+							<div class="title-bigger" style="background: url(__TMPL__/public/assets/style/imgs/index/news/1.png) center center no-repeat;background-size: 100% 100%;">
+								<div class="inner-box">
+									<div class="content">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
+								</div>
+							</div>
+							<div class="title">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
+							<div class="time">2022/11/05</div>
+							<div class="text">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
+							<div class="more-btn"> › </div>
+						</div>
+						<div class="item">
+							<div class="title-bigger" style="background: url(__TMPL__/public/assets/style/imgs/index/news/1.png) center center no-repeat;background-size: 100% 100%;">
+								<div class="inner-box">
+									<div class="content">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
+								</div>
+							</div>
+							<div class="title">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
+							<div class="time">2022/11/05</div>
+							<div class="text">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
+							<div class="more-btn"> › </div>
+						</div>
+						<div class="item">
+							<div class="title-bigger" style="background: url(__TMPL__/public/assets/style/imgs/index/news/1.png) center center no-repeat;background-size: 100% 100%;">
+								<div class="inner-box">
+									<div class="content">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
+								</div>
+							</div>
+							<div class="title">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
+							<div class="time">2022/11/05</div>
+							<div class="text">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
+							<div class="more-btn"> › </div>
+						</div>
+					</div>
+					<div class="more">更多新闻</div>
+				</div>
+			</div>
+			<div class="index-customer">
+				<div class="inner">
+					<div class="inner-bigger-title text-center">
+						<p>1600+家企业的信赖</p>
+					</div>
+					<div class="text-center" style="color: #999;font-size: 0.25rem;">深耕人力资源服务业，为企业提供更优质的服务</div>
+					<div class="index-customer-box">
+						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/1.png" /></div>
+						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/1.png" /></div>
+						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/1.png" /></div>
+					</div>
+				</div>
+			</div>
 			
 			
 			
