--- a/public/themes/simpleboot3/portal/solution.html
+++ b/public/themes/simpleboot3/portal/solution.html
@@ -8,6 +8,8 @@
 			<div class="index-banner index-banner-top" style="width:100%;">
 				<img src="__TMPL__/public/assets/style/img/solution/banner.png" class="hidden-xs index-banner-img" />
 				<img src="__TMPL__/public/assets/style/img/banner/moble_3.png" class="hidden-lg hidden-md hidden-sm index-banner-img" />
+				<div class="solution_banner_text_one">制造业外包服务解决方案</div>
+				<div class="solution_banner_text_two">不招人不管人通过商务合作完成生产订单</div>
 			</div>
 			<div class="bgc solution">
 				<div class="inner">
