--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -30,6 +30,7 @@
 	<link href="__TMPL__/public/assets/style/font/iconfont.css" rel="stylesheet">
     <link rel="shortcut icon" href="__TMPL__/public/assets/style/imgs/favicon.ico">
     <link href="__TMPL__/public/assets/style/css/contact.css" rel="stylesheet">
+    <link href="__TMPL__/public/assets/style/css/solution.css" rel="stylesheet">
     <link href="__TMPL__/public/assets/style/css/map.css" rel="stylesheet">
     <link href="__TMPL__/public/assets/style/css/news.css" rel="stylesheet">
 	<script src="__TMPL__/public/assets/style/js/jquery.min.js"></script>
