--- a/public/themes/simpleboot3/public/footer.html
+++ b/public/themes/simpleboot3/public/footer.html
@@ -1,125 +1,111 @@
-<div class="footer hidden-xs bgc" style="padding-bottom: 0;">
-    <div class="foot-top">
-		<div class="foot-top-left">
-			<div class="yuyue-btn text-center">
-				<a href="{:cmf_url('portal/Form/index')}" title="预约方案">预约方案</a>
-			</div>
-			<div class="contact-us">联系我们</div>
-			<div class="contact-text">联系电话：186 0111 8711</div>
-			<div class="contact-text">邮      箱：zhongjie@hualaogroup.com</div>
-			<div class="contact-text">地      址：中国北京人力资源产业园（通州园）</div>
-		</div>
-		<div class="foot-top-right">
-			<div class="row">
-				<ul class="col-lg-3 col-md-3 col-sm-3">
-					<li class="foot-top-right-title"><a href="javascript:void(0);">产品服务</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Service/index',array('id'=>1))}">政府清洁</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Service/index',array('id'=>2))}">酒店清洁</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Service/index',array('id'=>3))}">学校清洁</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Service/index',array('id'=>4))}">医院清洁</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Service/index',array('id'=>5))}">写字楼清洁</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Service/index',array('id'=>6))}">工业园区清洁</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Service/index',array('id'=>7))}">城市环境清洁</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Service/index',array('id'=>8))}">商场清洁</a></li>
-				</ul>
-				<ul class="col-lg-4 col-md-4 col-sm-4">
-					<li class="foot-top-right-title"><a href="javascript:void(0);">解决方案</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Solution/index',array('id'=>1))}">国企和上市物业公司保洁用工解决方案</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Solution/index',array('id'=>2))}">保洁用工风险解决方案</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Solution/index',array('id'=>3))}">保洁人员招聘外包解决方案</a></li>
-				</ul>
-				<ul class="col-lg-3 col-md-3 col-sm-3">
-					<li class="foot-top-right-title"><a href="javascript:void(0);">联系我们</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Contacts/index')}">联系方式</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Contacts/index')}">服务覆盖</a></li>
-					<li class="foot-top-right-text"><a href="{:cmf_url('portal/Contacts/index')}">加入我们</a></li>
-				</ul>
-				<ul class="col-lg-2 col-md-2 col-sm-2">
-					<li class="text-right">
-						<img src="__TMPL__/public/assets/style/img/qrcode.jpg" class="qrcode-img" />
-						<div class="qrcode-text">官方公众平台</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<img src="__TMPL__/public/assets/style/img/triangle.png" class="foot-top-img" />
-    </div>
-    <div class="foot_d">
-        <div class="row foot_down wd1100 " style="margin: 0 auto;">
-            <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
-				<div style="display: flex;">
-					<div>&copy;2022 中洁清洁服务有限公司&nbsp; &nbsp;</div>
-					<div style="width:300px;margin:2px auto 0; ">
-						<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37028502220584" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/file/ghs.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">鲁公网安备 37028502220584号</p></a>
-					</div>
-					<div><a target="_blank" href="https://beian.miit.gov.cn/?spm=5176.19720258.J_9220772140.111.6a2776f44GYwbi#/Integrated/index" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;color: #939393;">鲁ICP备20013027号-2</a></div>
-				</div>
-				
-                <!-- <div class="copyright">
-                    &copy;2022 中洁清洁服务有限公司&nbsp; &nbsp;鲁ICP备20013027号
-                </div> -->
-            </div>
-            <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12" style="text-align: right;">
-                <span>友情链接：</span>
-				<a href="https://www.hualaogroup.com/" target="_blank" style="margin-left: 0;">
-					<img src="__TMPL__/public/assets/style/img/hualao.gif"  style="width: 72px;" />
-				</a>
-               <!-- <links>
-                    <a href="{$vo.url|default=''}" target="{$vo.target|default=''}">
-                        {$vo.name|default=''}
-                    </a>
-                </links> -->
-				<!-- <a href="{:cmf_url('portal/Page/index',array('id'=>74))}">法律声明</a>
-				<a href="{:cmf_url('portal/Page/index',array('id'=>75))}">隐私政策</a> -->
-            </div>
-        </div>
-    </div>
-</div>
-<div class="footer cl hidden-sm hidden-md hidden-lg" style="padding-bottom: 0;background: #F5F5F7;">
+<div class="footer"> <!-- <a href="javascript:void(0);">产品服务</a> -->
 	<div class="inner">
-		<div class="inner-bigger-title">
-			<p>联系我们</p>
-		<!-- 	<p></p>
-			<p>COOPERATIVE CUSTOMERS</p> -->
-		</div>
-		<div class="foot-top-moble">
-			<div class="contact-text">电话：186 0111 8711</div>
-			<div class="contact-text">邮箱：zhongjie@hualaogroup.com</div>
-			<div class="contact-text">地址：中国北京人力资源产业园（通州园）</div>
-			<div class="yuyue-btn text-center" style="margin-top: 0.53rem;">
-				<a href="{:cmf_url('portal/Form/index')}" title="预约方案">预约方案</a>
+		<div class="foot-top">
+			<div class="foot-top-left">
+				<div class="item">
+					<div class="title">产品服务</div>
+					<div class="text">
+						<a href="javascript:void(0);">劳务派遣</a>
+						<a href="javascript:void(0);">劳务派遣</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">劳务派遣</a>
+						<a href="javascript:void(0);">劳务派遣</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">劳务派遣</a>
+						<a href="javascript:void(0);">劳务派遣</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">劳务派遣</a>
+						<a href="javascript:void(0);">劳务派遣</a>
+					</div>
+				</div>
+				<div class="item">
+					<div class="title">解决方案</div>
+					<div class="text">
+						<a href="javascript:void(0);">政务编外派遣服务</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">建筑工程、机电安装劳务分包</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">国企和上市物业公司保洁外包</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">员工工伤和意外伤害全面保障</a>
+					</div>
+				</div>
+				<div class="item">
+					<div class="title">走进华劳</div>
+					<div class="text">
+						<a href="javascript:void(0);">关于华劳</a>
+						<a href="javascript:void(0);">发展历程</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">新闻资讯</a>
+						<a href="javascript:void(0);">合作客户</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">联系我们</a>
+						<a href="javascript:void(0);">资质证书</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">员工查询</a>
+					</div>
+				</div>
+				<div class="item">
+					<div class="title">企业应用</div>
+					<div class="text">
+						<a href="javascript:void(0);">雇工伞服务系统</a>
+						<a href="javascript:void(0);">企业CRM</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">劳务派遣</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">刷活APP</a>
+					</div>
+					<div class="text">
+						<a href="javascript:void(0);">刷活小程序</a>
+					</div>
+				</div>
+			</div>
+			<div class="foot-top-right">
+				<img src="__TMPL__/public/assets/style/imgs/index/hualao-erweima.png" />
 			</div>
 		</div>
-		<div class="buju">
-			<div class="buju-title">全国<span>170+</span>家直营分/子公司</div>
-			<div class="buju-name">东北地区：黑龙江、吉林、辽宁</div>
-			<div class="buju-name">华北地区：北京、天津、河北、山西、内蒙古</div>
-			<div class="buju-name">华中地区：河南、湖北、湖南</div>
-			<div class="buju-name">华东地区：山东、江苏、安徽、上海、浙江、江西、福建</div>
-			<div class="buju-name">华南地区：广东、广西、海南、香港、澳门、台湾</div>
-			<div class="buju-name">西北地区：陕西、甘肃、宁夏、青海、新疆</div>
-			<div class="buju-name">西南地区：四川、贵州、云南、重庆、西藏</div>
+		<div class="foot-center">
+			<ul>
+				<li><a href="javascript:void(0);">中政外包</a></li>
+				<li><a href="javascript:void(0);">中洁清洁</a></li>
+				<li><a href="javascript:void(0);">华劳人力</a></li>
+				<li><a href="javascript:void(0);">中劳劳务</a></li>
+				<li><a href="javascript:void(0);">中朗安服</a></li>
+				<li><a href="javascript:void(0);">金伞保险</a></li>
+				<li><a href="javascript:void(0);">雇工伞</a></li>
+				<li><a href="javascript:void(0);">和谐关系</a></li>
+				<li><a href="javascript:void(0);">德劳网</a></li>
+			</ul>
 		</div>
-		<div class="foot-center-moble text-center">
-			<img src="__TMPL__/public/assets/style/img/qrcode.jpg" class="qrcode-img" />
-			<div class="qrcode-text">官方公众平台</div>
-		</div>
-		<div class="youqinglianjie text-center">
-			<a href="https://www.hualaogroup.com" title="华劳集团">
-				<img src="__TMPL__/public/assets/style/img/lianjie.png" class="lianjie-img" />
-			华劳集团</a>
-		</div>
-		<div class="beian">
-			<div class="copyright" style="margin-top: 0.75rem;">
-			    &copy;2022 中洁清洁服务有限公司
+		<div class="foot-bottom">
+			<div class="foot-bottom-left">
+				<img src="__TMPL__/public/assets/style/imgs/index/logo.svg" class="logo-img" />
+				<div class="text">
+					<div>华劳集团股份有限公司  ©2022  HUALAO 版权所有</div> 
+					<p>
+						<a href="http://www.miit.gov.cn/" target="_blank" style="padding-right: 10px;">鲁ICP备17039940号-1</a>
+					   	<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37149202000991" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/file/ghs.png" style="float:left;">鲁公网安备 37149202000991号</a>
+					</p>
+				</div>
 			</div>
-			<!-- <div class="copyright">鲁ICP备20013027号</div> -->
-			<div style="width:300px;margin:0 auto;height: 20px; ">
-				<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37028502220584" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/file/ghs.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">鲁公网安备 37028502220584号</p></a>
+			<div class="foot-bottom-right">
+				<div>400-8718711 <img src="__TMPL__/public/assets/style/imgs/index/footer-phone.svg" /></div>
+				<div>0534-2228711 <img src="__TMPL__/public/assets/style/imgs/index/footer-phone.svg" /></div>
+				<div>kf@hualaogroup.com <img src="__TMPL__/public/assets/style/imgs/index/footer-email.svg" /></div>
+				<div>山东省德州市天衢新区康博大厦1701 <img src="__TMPL__/public/assets/style/imgs/index/footer-position.svg" /></div>
 			</div>
-			<div><a target="_blank" href="https://beian.miit.gov.cn/?spm=5176.19720258.J_9220772140.111.6a2776f44GYwbi#/Integrated/index" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;color: #939393;">鲁ICP备20013027号-2</a></div>
 		</div>
-		
 	</div>
 </div>
 
